--- a/scss/sections/fifth-page.scss
+++ b/scss/sections/fifth-page.scss
@@ -28,10 +28,10 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    max-width: 50%;
+    width: 50vw;
 
     @include tablets {
-        max-width: 100%;
+        width: 100vw;
         left: 0;
     }
 }
@@ -88,22 +88,28 @@
 }
 .fifthpage__hidden {
     background: rgba(0, 0, 0, .6);
-    height: 0;
+    height: 100%;
     width: 0;
     overflow: hidden;
+    transition: 0.6s;
 }
-.fifthpage__hidden__text {
+.fifthpage__hidden-text {
     padding: rem(60px) rem(30px) 0;
     color: #fff;
     font-family: Ubuntu-Light;
     font-weight: 300;
     font-size: rem(14px);
+    width: calc(50vw - 15rem);
+    @include tablets {
+        width: calc(100vw - 12rem);
+    }
+    @include phones {
+        width: calc(100vw - 6rem);
+    }
 }
 .active .fifthpage__hidden {
     height: 100%;
-    width: 100%;
     overflow: hidden;
-
 }
 
 .vertical-text {
