--- a/scss/sections/seventh-page.scss
+++ b/scss/sections/seventh-page.scss
@@ -159,6 +159,7 @@
     padding: rem(10px) rem(15px);
     text-transform: none;
     display: inline-block;
+    outline: none;
     cursor: pointer;
 }
 .clear__button:hover {
@@ -197,36 +198,21 @@
 .checkbox__container {
     margin-bottom: rem(20px);
 }
-.form__checkbox__text {
+.form__checkbox {
+    vertical-align: middle;
+}
+.checkbox__text {
     display: inline-block;
     font-size: rem(14px);
     font-family: Ubuntu-Light;
     font-weight: 300;
     color: #fff;
+}
+.form__checkbox--element {
     vertical-align: middle;
 }
-
 .form__radio--fake {
     content: "";
     display: none;
-    /*position: absolute;
-    border-radius: 50%;
-    background: red;
-    width: rem(8px);
-    height: rem(8px);
-    top: rem(5px);
-    left: rem(5px);*/
 }
-
-
-/*.form__radio--fake:after {
-    display: inline-block;
-    width: rem(20px);
-    height: rem(20px);
-    border: rem(1px) solid #dddddd;
-    border-radius: 50%;
-    position: relative;
-}*/
-
-
 
