--- a/scss/sections/third-page.scss
+++ b/scss/sections/third-page.scss
@@ -4,6 +4,7 @@
     background: linear-gradient(180deg,#f9b43b 0,#eb8c38 40%,#eb8c38 60%,#eb8c38 0,#f9b43b);
     background-size: cover;
 }
+
 .container__third-page {
     display: flex;
     flex-direction: row;
@@ -12,13 +13,32 @@
     font-size: 16px;
     color: #fff;
 }
-.third-page__main {
+.carousel {
+    position: relative;
     height: 70%;
+    width: 100%;
+    overflow: hidden;
+    @include phones {
+        height: 90%;
+    }
+}
+.carousel__list {
+    white-space: nowrap;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.carousel__item {
+    height: 100%;
+    display: inline-block;
+    width: 100%;
     @include tablets {
         height: 100%;
     }
 }
-.compound__main__icon {
+.compound__icon {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,20 +50,10 @@
     width: rem(90px);
 }
 
-
-.third-page__img__container {
-    position: relative;
-    width: 50%;
+.img-first__pic {
+    object-fit: contain;
     height: 100%;
-    @include tablets {
-        width: 95%;
-        height: 50%;
-        margin-top: 10%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: flex-start;
-    }
+    width: 100%;
 }
 .third-page__compound {
     content: "";
@@ -54,7 +64,7 @@
     height: rem(90px);
     width: rem(90px);
 }
-.third-page__compound--inner {
+.compound__inner {
     position: relative;
 }
 .third-page__hidden {
@@ -72,13 +82,13 @@
 .third-page__compound:hover .third-page__hidden{
     display: block;
 }
-.compound__text--inner {
+.text__inner {
     font-weight: 300;
     font-family: Ubuntu-Medium;
     font-size: rem(14px);
     padding-right: 5%;
 }
-.compound__weight--inner {
+.weight__inner {
     font-weight: 300;
     font-family: Ubuntu-Light;
     font-size: rem(14px);
@@ -96,23 +106,27 @@
 
 
 
-.third-page__icon--first {
+.third-page__kkal {
     content: "";
     position: absolute;
-    bottom: 0;
+    top: 85%;
     left: 0;
     @include tablets {
         top: 0;
-        left: 90%;
+        left: 85%;
+    }
+    @include phones {
+        left: 80%;
+        top: 0;
     }
 }
 .kkal {
     fill: #fad39d;
 }
-.svg_wrap--kkal {
+.svg__kkal {
     position: relative;
 }
-.compound__text--kkal {
+.text__kkal {
     font-size: rem(20px);
     font-family: Gagalin-Regular;
     font-weight: 300;
@@ -123,7 +137,7 @@
     top: 33%;
     right: 8%;
     @include tablets {
-        top: 4%;
+        top: 30%;
         right: 5%;
     }
 }
@@ -141,14 +155,23 @@
 .container__img {
     display: inline-block;
     position: relative;
-    padding-top: 15%;
+    padding-top: 10%;
+    width: 50%;
+    height: 100%;
     padding-bottom: 10%;
     @include tablets {
-        padding-bottom: 5%;
-        margin-top: 5%;
+        padding-bottom: 0;
+        padding-top: 0;
+        margin-top: 0;
+        height: 50%;
+        width: 95%;
+    }
+    @include phones {
+        height: 40%;
     }
 }
-.compound__hidden__list {
+
+.compound__list {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -157,24 +180,24 @@
     width: 100%;
     padding: 10% 10%;
 }
-.compound__hidden__item {
+.compound__item {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-between;
     width: 100%;
 }
-.icon__compound__list {
+.icon__list {
     height: 1.825rem;
     width: rem(40px);
     padding-right: 5%;
 }
 .arrow-left {
     height: 70%;
-    width: rem(150px);
+    width: 4rem;
     position: relative;
 }
-.arrow-left__link {
+.arrow__link--left {
     content: "";
     position: absolute;
     top: 50%;
@@ -195,10 +218,10 @@
 }
 .arrow-right {
     height: 70%;
-    width: rem(150px);
+    width: 4rem;
     position: relative;
 }
-.arrow-right__link {
+.arrow__link--right {
     content: "";
     position: absolute;
     top: 50%;
@@ -223,6 +246,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+    height: 100%;
     @include tablets {
         flex-direction: column;
         align-items: center;
@@ -232,15 +257,18 @@
 .third-page__description {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: space-around;
     padding-right: 5%;
+    padding-top: 5%;
     width: 50%;
+    height: 100%;
+    white-space: normal;
     @include tablets {
-        margin-bottom: 10%;
         height: 50%;
         width: 95%;
         padding-right: 0;
+        padding-top: 0;
     }
 }
 .third-page__title {
@@ -248,7 +276,7 @@
     font-family: Gagalin-Regular;
     font-weight: 300;
     @include tablets {
-        font-size: 4.125rem;
+        font-size: 2.8rem;
         text-align: center;
     }
 }
@@ -257,34 +285,41 @@
     font-family: Ubuntu-Light;
     font-weight: 300;
 }
-.third-page__bottom__info {
+.price__info {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: baseline;
     @include tablets {
         margin: 0 auto;
+        width: 100%;
+    }
+    @include phones {
+        justify-content: center;
     }
 }
-.third-page__bottom {
+.price {
     color: #e45028;
     font-family: Gagalin-Regular;
     font-weight: 300;
 }
-.third-page__bottom__price {
+.price__value {
     font-size: rem(72px);
     display: inline-block;
     padding-right: 2%;
     @include tablets {
-        font-size: 3.125rem;
+        font-size: 2.8rem;
     }
 }
-.third-page__bottom__text {
+.price__text {
     font-size: rem(30px);
     display: inline-block;
     padding-right: 5%;
+    @include phones {
+        font-size: rem(25px);
+    }
 }
-.button__link {
+.burger-button__link {
     color: #fff;
     border-radius: rem(3px);
     border: rem(1px) solid #e45028;
