--- a/scss/layout/adjustment.scss
+++ b/scss/layout/adjustment.scss
@@ -4,7 +4,7 @@
     height: 100%;
     min-height: 0;
     position: relative;
-    overflow: hidden;
+    // overflow: hidden;
 }
 .maincontent {
     min-height: 650px;
