--- a/scss/sections/eigthpage.scss
+++ b/scss/sections/eigthpage.scss
@@ -8,6 +8,17 @@
     width: 100%;
     height: 100%;
 }
+.map-page {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+.map {
+    height: 95%; 
+    width: 100%;
+    position: absolute;
+    top: 0;
+}
 
 .footer {
     position: absolute;
