--- a/scss/sections/first-page.scss
+++ b/scss/sections/first-page.scss
@@ -1,8 +1,20 @@
 
 
 .first-page {
-    background: url('../img/1background.jpg') center center no-repeat;
+    background: rgba(0, 0, 0, 0.7) url('../../img/1background.png') center center no-repeat;
     background-size: cover;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+}
+.video {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 0;
 }
 
 .header {
