--- a/scss/sections/second-page.scss
+++ b/scss/sections/second-page.scss
@@ -4,7 +4,7 @@
 .second-page {
     background: url('../img/2background.jpg') center center no-repeat;
     background-size: cover;
-    
+    z-index: 1;
 }
 .secondpage__top {
     margin-bottom: 10%;
